--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,11 +1,45 @@
-fastapi
-uvicorn[standard]
-sqlalchemy
-alembic
-psycopg2-binary
-python-jose[cryptography]
-passlib[bcrypt]
-python-multipart
-boto3
-python-dotenv
-pydantic[email]
+aiofiles==25.1.0
+alembic==1.18.4
+annotated-doc==0.0.4
+annotated-types==0.7.0
+anyio==4.12.1
+bcrypt==4.0.1
+boto3==1.42.54
+botocore==1.42.54
+cffi==2.0.0
+click==8.3.1
+colorama==0.4.6
+cryptography==46.0.5
+dnspython==2.8.0
+ecdsa==0.19.1
+email-validator==2.3.0
+fastapi==0.131.0
+greenlet==3.3.2
+h11==0.16.0
+httptools==0.7.1
+idna==3.11
+jmespath==1.1.0
+Mako==1.3.10
+MarkupSafe==3.0.3
+passlib==1.7.4
+psycopg2-binary==2.9.11
+pyasn1==0.6.2
+pycparser==3.0
+pydantic==2.12.5
+pydantic_core==2.41.5
+python-dateutil==2.9.0.post0
+python-dotenv==1.2.1
+python-jose==3.5.0
+python-multipart==0.0.22
+PyYAML==6.0.3
+rsa==4.9.1
+s3transfer==0.16.0
+six==1.17.0
+SQLAlchemy==2.0.46
+starlette==0.52.1
+typing-inspection==0.4.2
+typing_extensions==4.15.0
+urllib3==2.6.3
+uvicorn==0.41.0
+watchfiles==1.1.1
+websockets==16.0
